# ChessUCI

./: CMakeLists.txt  Doxyfile.in  conanfile.py
cmake/: ChessUCIConfig.cmake.in
include/chessuci/: engine_handler.h  engine_process.h  engine_process_unix.h  engine_process_win.h  gui_handler.h  move.h  process_factory.h  protocol.h  string_conversion.h  uci_handler.h
src/: engine_handler.cpp  engine_process.cpp  engine_process_unix.cpp  engine_process_win.cpp  gui_handler.cpp  move.cpp  process_factory.cpp  protocol.cpp  uci_handler.cpp
test/: CMakeLists.txt
test/processes/: CMakeLists.txt
test/processes/helpers/: test_crash.cpp  test_echo.cpp  test_hang.cpp  test_immediate_exit.cpp  test_line_echo.cpp  test_output_flood.cpp  test_slow_start.cpp  test_unicode.cpp  test_working_dir.cpp  test_zombie.cpp
test/processes/src/: test_engine_process.cpp
test/src/: uci_move_matcher_test.cpp
test/unit/: CMakeLists.txt
test/unit/helper/: EngineProcessMock.cpp  EngineProcessMock.h
test/unit/src/: engine_handler_callback_test.cpp  engine_handler_parsing_test.cpp  gui_handler_callback_test.cpp  gui_handler_parsing_test.cpp  uci_move_conversion_test.cpp  uci_move_matcher_test.cpp  uci_move_parser_test.cpp  unicode_conversion_win_test.cpp
